# Rag-security-audit

./: .gitignore  LINKEDIN_POST.md  PRESENTATION.md  README.md  dashboard.html  pyproject.toml  report.json  results.json
src/: audit.py  info_theory.py  scoring.py
test_corpus/: README.md
test_corpus/clean/: api_docs.txt  benefits_faq.txt  incident_response.txt  ml_pipeline.txt  onboarding.txt  remote_work_policy.txt
test_corpus/injected/: data_exfil.txt  delimiter_spoof.txt  gradual_escalation.txt  instruction_override.txt  mixed_attacks.txt  output_control.txt  role_hijack.txt
tests/: test_e2e.py  test_info_theory.py  test_injection_scanner.py  test_obfuscation.py  test_scoring.py  test_structural_scanner.py
