[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-security-audit"
version = "2.0.0"
description = "Audits RAG pipelines for injection, poisoning, hallucination, and obfuscation evasion risks."
requires-python = ">=3.11"
keywords = ["rag", "security", "llm", "prompt-injection", "mitre-atlas", "ai-security"]
license = {text = "MIT"}
authors = [
    {name = "RAG Security Audit Team"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
rag-audit = "src.audit:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long — pre-existing in source, not blocking

[tool.ruff.lint.per-file-ignores]
"src/audit.py" = ["UP"]   # pyupgrade suggestions for pre-existing code

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
